--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,4 +24,28 @@ nav {
   font-size: 1.4rem;
   justify-content: center;
   align-items: center;
+  transition: 0.2s;
+}
+
+.nav-link:hover {
+  filter: brightness(90%);
+}
+
+.page-title {
+  width: 100%;
+  margin: 10px 0;
+  text-align: center;
+}
+
+.pr-list {
+  list-style-type: none;
+}
+
+.pr-list-item {
+  margin: 15px;
+}
+
+.pr-link {
+  text-decoration: none;
+  font-size: 1.2rem;
 }
