--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,7 +37,7 @@ nav {
   text-align: center;
 }
 
-.pr-list {
+ul {
   list-style-type: none;
 }
 
@@ -48,4 +48,16 @@ nav {
 .pr-link {
   text-decoration: none;
   font-size: 1.2rem;
+}
+
+.about-me-container {
+  margin-left: 15px;
+}
+
+h3 {
+  margin: 15px 0 10px 0;
+}
+
+p {
+  text-indent: 20px;
 }
