create finalpaper view

--- a/views/about_me.erb
+++ b/views/about_me.erb
@@ -1,6 +1,6 @@
 <h1 class="page-title">Sobre mim</h1>
 
-<div class="about-me-container">
+<div class="container">
   <p>Olá, me chamo Eduardo e tenho 25 anos.</p>
 
   <h3>Lar</h3>
