--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,8 +8,8 @@
 <body>
   <nav>
     <a class="nav-link" href="/">Sobre mim</a>
-    <a class="nav-link" href="/myprs">Meus pull requests</a>
-    <a class="nav-link" href="/finalpaper">Meu TCC</a>
+    <a class="nav-link" href="/my_prs">Meus pull requests</a>
+    <a class="nav-link" href="/final_paper">Meu TCC</a>
   </nav>
   <%= yield %>
 </body>
